Removing manual array copy